fix: overflow to scroll gallery

--- a/app/css/projects.module.css
+++ b/app/css/projects.module.css
@@ -4,6 +4,7 @@
   border-start-start-radius: 40px;
   border-start-end-radius: 40px;
   position: relative;
+  overflow: hidden;
 }
 
 .scrollView {
